--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
 <body>
 	
 	<nav class="navigation">
-		<a href="#link-one" title="Lorem ipsum">Lorem ipsum.</a>
-		<a href="#link-two" title="Lorem ipsum">Lorem ipsum.</a>
+		<a class="active" href="#about" title="About">About</a>
+		<a href="#work" title="Work">Work</a>
+		<a href="#clients" title="Clients">Clients</a>
+		<a href="#blogs" title="Blogs">Blogs</a>
+		<a href="#contact" title="Contact">Contact</a>
 	</nav>
 	
 	<div id="container">
-		<div id="link-one" class="box" data-section="link-one">
-			Hello
+		<div id="about" class="box">
+			About 
 		</div>
-
-		<div id="link-two" class="box" data-section="link-two">
-			World!
+		<div id="work" class="box">
+			Work
+		</div>
+		<div id="clients" class="box">
+			Clients
+		</div>
+		<div id="blogs" class="box">
+			Blogs
+		</div>
+		<div id="contact" class="box">
+			Contact
 		</div>
 	</div>
 
