--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<a class="forkme" href="https://github.com/Luanramos/uploadPreview">View on GitHub</a>
 	
 	<nav class="navigation">
 		<a class="active" href="#about" title="About">About</a>
