--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Anchor Target</title>
+	<title>Smooth Scrolling</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<a class="forkme" href="https://github.com/Luanramos/uploadPreview">View on GitHub</a>
+	<a class="forkme" href="https://codeessentials.github.io/smooth-scrolling/">View on GitHub</a>
 	
 	<nav class="navigation">
 		<a class="active" href="#about" title="About">About</a>
