--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<a class="forkme" href="https://codeessentials.github.io/smooth-scrolling/">View on GitHub</a>
+	<a class="forkme" href="https://github.com/codeessentials/smooth-scrolling">View on GitHub</a>
 	
 	<nav class="navigation">
 		<a class="active" href="#about" title="About">About</a>
